# support-radar

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
agent/: Cargo.toml
agent/src/: main.rs
cmd/server/: main.go
internal/config/: config.go
internal/domain/: models.go
internal/repository/postgres/: repository.go
internal/repository/redis/: client.go
internal/service/: commands.go
internal/transport/http/: handlers.go  templates.go
internal/transport/websocket/: handler.go  hub.go
migrations/: 001_init.sql
scripts/: generate_certs.sh
